--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -128,7 +128,7 @@ fos_oauth_server:
             access_token_lifetime: 86400 # 1 day
             refresh_token_lifetime: 15552000 # 6 months
 
-#JMS Serializer Configuration
+# JMS Serializer Configuration
 jms_serializer:
     metadata:
         directories:
@@ -146,7 +146,7 @@ nelmio_api_doc:
     request_listener:
         enabled: false
 
-# KnpPaginatorBundle Configuration
+# Knp Paginator Bundle Configuration
 knp_paginator:
     page_range: 5                       # number of links showed in the pagination menu (e.g: you have 10 pages, a page_range of 3, on the 5th page you'll see links to page 4, 5, 6)
     default_options:                                 
@@ -159,4 +159,20 @@ knp_paginator:
         sortable: '@KnpPaginator/Pagination/sortable_link.html.twig' # sort link template                                
         filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template
 
-
+# Nelmio CORS Bundle Configuration
+nelmio_cors:
+        defaults:
+            allow_credentials: false
+            allow_origin: []
+            allow_headers: []
+            allow_methods: []
+            expose_headers: []
+            max_age: 0
+            hosts: []
+            origin_regex: false
+        paths:
+            '^/':
+                allow_origin: ['*']
+                allow_headers: ['*']
+                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+                max_age: 3600
